--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header {
 	background: url(../img/header.png) no-repeat center top / cover;
 	}
 #all {
-	max-width:1920px;
+	width:1920px;
 	overflow:hidden;
 	margin: 0 auto;
 }
@@ -121,9 +121,11 @@ p {
 	font-weight: normal;
 	line-height: 1.2;
 }
-table {
+.colons table {
 	margin: 0 auto;
 	text-align: left;
+	width: 100%;
+	height: 570px;
 }
 .one{
 	font-family: "Attentica 4F UltraLight";
